# NeuralGuard

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
docs/: DECISIONS.md  DESIGN.md  INSTALL.md  ROADMAP.md
gui/NeuralGuard/: App.xaml  App.xaml.cpp  DataTable.idl  DataTable.xaml  DataTable.xaml.cpp  DataTable.xaml.h  Db.h  MainWindow.Insights.cpp  MainWindow.RowActions.cpp  MainWindow.Settings.cpp  MainWindow.Shared.h  MainWindow.Table.cpp  MainWindow.Views.cpp  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  NeuralGuard.rc  NeuralGuard.vcxproj  Row.cpp  Row.h  RowData.h  SemBrush.cpp  SemBrush.h  SemBrush.idl  Tray.cpp  Tray.h  app.manifest  pch.h
gui/NeuralGuard/Themes/: NeuralGuardColors.xaml  NeuralGuardStyles.xaml
installer/: NeuralGuard.iss
scripts/: build.ps1  gen_icons.py  gen_nav_icons.py  narrate_digest.py  package.ps1  requirements-ml.txt  train_supervised.py
src/common/: wfp_util.h
src/core/: cmd.cpp  cmd.h  db.cpp  db.h  dns.cpp  dns.h  enforcer.cpp  enforcer.h  flowstats.cpp  flowstats.h  habit.cpp  habit.h  identity.cpp  identity.h  iforest.cpp  iforest.h  prompt.cpp  prompt.h  scorer.cpp  scorer.h  util.h  version.h
src/ngctl/: main.cpp
src/ngd/: coalesce.h  enforce.cpp  enforce.h  main.cpp  recorder.cpp  recorder.h  service.cpp  service.h
src/ngmon/: main.cpp
src/ngtray/: dashboard.cpp  dashboard.h  main.cpp  ngtray.rc
